fix: corrige configuração de porta do frontend para 8081